--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -14,6 +14,15 @@ rules:
   - list
   - watch
 - apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - create
+  - get
+  - list
+  - update
+- apiGroups:
   - dot-ai.devopstoolkit.live
   resources:
   - remediationpolicies
