feat(prd-4): implement Solution controller (Milestone 1 complete)
- Created Solution controller with basic reconciliation logic
- Added comprehensive integration tests (5 test scenarios, 81.6% coverage)
- Generated RBAC manifests and updated kustomization
- Created user documentation (docs/solution-guide.md)
- Renamed sample files for consistency
- Updated PRD checkboxes for Milestone 1 completion
- Added work log entry with implementation details

Progress: Milestone 1 complete (5/5 success criteria) - Next: Milestone 2 Resource Tracking

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,6 +3,7 @@
 # It should be run by config/default
 resources:
 - bases/dot-ai.devopstoolkit.live_remediationpolicies.yaml
+- bases/dot-ai.devopstoolkit.live_solutions.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
