feat(prd-11): complete Milestone 5 - documentation and sample reorganization
- Reorganized samples into config/samples/remediation/ directory for consistency
- Renamed samples to match solution/ pattern (remediation_comprehensive.yaml, remediation_webhook_secrets.yaml)
- Created remediation kustomization with proper namespace isolation
- Updated all webhook examples to use webhookUrlSecretRef exclusively
- Added comprehensive Secret-specific troubleshooting section to docs
- Removed all deprecated webhookUrl references from user-facing documentation
- Updated PRD with Milestone 5 completion and detailed work log

Progress: 83% complete (5 of 6 milestones) - Ready for Milestone 6 (CHANGELOG, version bump, release)

--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -6,8 +6,9 @@ namespace: dot-ai
 resources:
 # Create namespace first
 - namespace.yaml
-# RemediationPolicy samples
-- remediationpolicy_comprehensive.yaml
+# RemediationPolicy samples (in subdirectory)
+- remediation/remediation_webhook_secrets.yaml
+- remediation/remediation_comprehensive.yaml
 # Solution samples (in subdirectory)
 - solution/solution_simple_resources.yaml
 - solution/solution_simple.yaml
