--- a/config/samples/remediation/remediation_comprehensive.yaml
+++ b/config/samples/remediation/remediation_comprehensive.yaml
@@ -50,17 +50,24 @@ spec:
   
   # Notifications configuration (DISABLED by default for safety)
   # You can enable Slack, Google Chat, or both simultaneously
+  #
+  # IMPORTANT: Webhook URLs are stored securely in Kubernetes Secrets
+  # See remediation_webhook_secrets.yaml in this directory for Secret creation examples
   notifications:
     # Slack notification configuration
     slack:
       enabled: false                  # Enable Slack notifications (default: false)
-      webhookUrl: "https://hooks.slack.com/services/YOUR/WEBHOOK/URL"  # Replace with your actual webhook URL
+      webhookUrlSecretRef:            # RECOMMENDED: Reference to Secret containing webhook URL
+        name: slack-webhook           # Secret name (must be in same namespace as this CR)
+        key: url                      # Key within the Secret
       channel: "#k8s-alerts"          # Channel where notifications will be sent
       notifyOnStart: false            # Notify when remediation starts (default: false)
       notifyOnComplete: true          # Notify when remediation completes (default: true)
     # Google Chat notification configuration
     googleChat:
       enabled: false                  # Enable Google Chat notifications (default: false)
-      webhookUrl: "https://chat.googleapis.com/v1/spaces/YOUR/SPACE/messages?key=YOUR_KEY&token=YOUR_TOKEN"
+      webhookUrlSecretRef:            # RECOMMENDED: Reference to Secret containing webhook URL
+        name: gchat-webhook           # Secret name (must be in same namespace as this CR)
+        key: url                      # Key within the Secret
       notifyOnStart: false            # Notify when remediation starts (default: false)
       notifyOnComplete: true          # Notify when remediation completes (default: true)
